--- a/PerformanceExample/PerformanceExample.csproj
+++ b/PerformanceExample/PerformanceExample.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boxing.cs" />
+    <Compile Include="Collections.cs" />
+    <Compile Include="Memory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
